weird register bugs squashed

--- a/css/sass/screen.scss
+++ b/css/sass/screen.scss
@@ -849,6 +849,13 @@ td form {
 #signinForm {
 	@extend .fancyList;
 }
+#interests .ui-widget-content.ui-autocomplete-input {
+	width: 99%;
+}
+
+.tagit-close .ui-icon.ui-icon-close {
+	display: none;
+}
 
 /* Mobile 
 ============================ */
